# RagDemo

./: .gitignore  LICENSE  README.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml  requirement.txt
DataModels/Enum/: EMode.py
DataModels/Model/: Request.py
RagDemo_Client/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
RagDemo_Client/src/: App.vue
RagDemo_Client/src/api/server/: ChatBot.ts  Options.ts  PreTarget.ts  chat.js  index.js  index.ts
RagDemo_Client/src/components/: ChatMessage.vue  Drawer.vue  DrawerWidget.vue
RagDemo_Client/src/pages/Embedding/: EmbeddingView.vue
RagDemo_Client/src/pages/Home/: HomeView.vue
RagDemo_Client/src/router/: index.ts
RagDemo_Client/src/stores/: global.ts
RagDemo_Client/src/type/: embeddingChunks.ts  formParams.ts
RagDemo_Server/: Dockerfile  main.py  pyproject.toml  requirement.txt
RagDemo_Server/DataModels/Enums/: EMode.py
RagDemo_Server/DataModels/Models/: Option.py  Request.py
RagDemo_Server/Routers/: OptionRouter.py  PreTargetRouter.py  chatRouter.py
RagDemo_Server/Services/: AIService.py  OptionService.py  PreTargetService.py
RagDemo_Server/VectorStore/: textList.json
RagDemo_Server/VectorStore/sample/: sample.faiss  sample.graphml  sample.json
RagDemo_Server/VectorStore/需求文件/: 需求文件.faiss  需求文件.graphml  需求文件.json
RagDemo_Server/documents/: 需求文件撰寫要點 3.0.docx
RagDeom_Server/: Dockerfile  main.py
RagDeom_Server/Services/: AIService.py
RagDeom_Server/VectorStore/: textList.json  vectorDB.faiss
Routers/: chatRouter.py
Services/: AIService.py
VectorStore/: graphDB.graphml  vectorDB.faiss
documents/: 需求文件撰寫要點 3.0.docx
